Prevent horizontal scrolling on mobile 3

--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ body {
 .line {
     position: absolute;
     left: 0;
-    width: 150vw;
+    width: 150%;
     height: 100%;
     background: repeating-linear-gradient(
       100deg,
